@@ -1,5 +1,9 @@
 package commands.coc.util;
 
+import java.sql.Array;
+import java.sql.Connection;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -9,6 +13,7 @@ import datawrapper.Clan;
 import datawrapper.Player;
 import datawrapper.User;
 import dbutil.DBManager;
+import dbutil.DBUtil;
 import net.dv8tion.jda.api.events.interaction.command.CommandAutoCompleteInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
@@ -40,6 +45,13 @@ public class cwdonator extends ListenerAdapter {
 		}
 
 		String clantag = clanOption.getAsString();
+		
+		// Get new optional parameters
+		OptionMapping excludeLeadersOption = event.getOption("exclude_leaders");
+		boolean excludeLeaders = excludeLeadersOption != null && "true".equals(excludeLeadersOption.getAsString());
+		
+		OptionMapping useListsOption = event.getOption("use_lists");
+		boolean useLists = useListsOption != null && "true".equals(useListsOption.getAsString());
 
 		User userexecuted = new User(event.getUser().getId());
 		HashMap<String, Player.RoleType> clanroles = userexecuted.getClanRoles();
@@ -78,27 +90,53 @@ public class cwdonator extends ListenerAdapter {
 		HashMap<Integer, ArrayList<Tuple<Integer, Integer>>> mappings = getMappings();
 
 		ArrayList<Tuple<Integer, Integer>> currentmap = mappings.get(cwsize);
+		
+		// If using lists, initialize/sync them
+		if (useLists) {
+			initializeAndSyncLists(clantag, clan);
+		}
 
 		for (Tuple<Integer, Integer> map : currentmap) {
-			Collections.shuffle(warMemberList);
-			Player chosen = warMemberList.get(0);
-			int mapposition = chosen.getWarMapPosition();
-			int i = 0;
-			while (true) {
-				if (mapposition >= map.getFirst() && mapposition <= map.getSecond()) {
-					chosen = warMemberList.get(i);
-					mapposition = chosen.getWarMapPosition();
-					i++;
-					continue;
+			Player chosen = null;
+			
+			if (useLists) {
+				// Pick from list A
+				chosen = pickPlayerFromListA(clantag, warMemberList, map, excludeLeaders);
+			} else {
+				// Original random logic
+				Collections.shuffle(warMemberList);
+				chosen = warMemberList.get(0);
+				int mapposition = chosen.getWarMapPosition();
+				int i = 0;
+				while (true) {
+					if (mapposition >= map.getFirst() && mapposition <= map.getSecond()) {
+						chosen = warMemberList.get(i);
+						mapposition = chosen.getWarMapPosition();
+						i++;
+						continue;
+					}
+					if (chosen.getWarPreference() == false) {
+						chosen = warMemberList.get(i);
+						mapposition = chosen.getWarMapPosition();
+						i++;
+						continue;
+					}
+					// Check exclude_leaders if enabled
+					if (excludeLeaders && isLeaderOrCoLeader(chosen)) {
+						chosen = warMemberList.get(i);
+						mapposition = chosen.getWarMapPosition();
+						i++;
+						continue;
+					}
+					break;
 				}
-				if (chosen.getWarPreference() == false) {
-					chosen = warMemberList.get(i);
-					mapposition = chosen.getWarMapPosition();
-					i++;
-					continue;
-				}
-				break;
 			}
+			
+			if (chosen == null) {
+				continue; // Should not happen but safety check
+			}
+			
+			int mapposition = chosen.getWarMapPosition();
 			warMemberList.remove(chosen);
 			if (ping) {
 				if (chosen.getUser() != null) {
@@ -140,8 +178,16 @@ public class cwdonator extends ListenerAdapter {
 		if (focused.equals("clan")) {
 			List<Command.Choice> choices = DBManager.getClansAutocomplete(input);
 
-			event.replyChoices(choices).queue(_ -> {
-			}, _ -> {
+			event.replyChoices(choices).queue(unused -> {
+			}, unused2 -> {
+			});
+		} else if (focused.equals("exclude_leaders") || focused.equals("use_lists")) {
+			List<Command.Choice> choices = new ArrayList<>();
+			if ("true".startsWith(input.toLowerCase())) {
+				choices.add(new Command.Choice("true", "true"));
+			}
+			event.replyChoices(choices).queue(unused -> {
+			}, unused2 -> {
 			});
 		}
 		}, "CwdonatorAutocomplete-" + event.getUser().getId()).start();
@@ -204,6 +250,231 @@ public class cwdonator extends ListenerAdapter {
 			map = mappings;
 		}
 		return map;
+	}
+	
+	/**
+	 * Initialize and synchronize cwdonator lists for a clan
+	 */
+	private void initializeAndSyncLists(String clanTag, Clan clan) {
+		try {
+			// Check if lists exist
+			String checkSql = "SELECT list_a, list_b FROM cwdonator_lists WHERE clan_tag = ?";
+			try (Connection conn = dbutil.Connection.getConnection();
+				 PreparedStatement stmt = conn.prepareStatement(checkSql)) {
+				stmt.setString(1, clanTag);
+				ResultSet rs = stmt.executeQuery();
+				
+				ArrayList<String> listA = new ArrayList<>();
+				ArrayList<String> listB = new ArrayList<>();
+				boolean exists = false;
+				
+				if (rs.next()) {
+					exists = true;
+					Array listAArray = rs.getArray("list_a");
+					Array listBArray = rs.getArray("list_b");
+					if (listAArray != null) {
+						String[] listAData = (String[]) listAArray.getArray();
+						for (String tag : listAData) {
+							listA.add(tag);
+						}
+					}
+					if (listBArray != null) {
+						String[] listBData = (String[]) listBArray.getArray();
+						for (String tag : listBData) {
+							listB.add(tag);
+						}
+					}
+				}
+				
+				// Get current clan members
+				ArrayList<Player> clanMembers = clan.getPlayersDB();
+				ArrayList<String> currentTags = new ArrayList<>();
+				for (Player p : clanMembers) {
+					if (!p.isHiddenColeader()) {
+						currentTags.add(p.getTag());
+					}
+				}
+				
+				if (!exists) {
+					// Create new lists with all current members in List A
+					listA.addAll(currentTags);
+					String insertSql = "INSERT INTO cwdonator_lists (clan_tag, list_a, list_b) VALUES (?, ?::text[], ?::text[])";
+					try (PreparedStatement insertStmt = conn.prepareStatement(insertSql)) {
+						insertStmt.setString(1, clanTag);
+						insertStmt.setArray(2, conn.createArrayOf("text", listA.toArray()));
+						insertStmt.setArray(3, conn.createArrayOf("text", new String[0]));
+						insertStmt.executeUpdate();
+					}
+				} else {
+					// Sync lists with current members
+					// Add missing players to List A
+					for (String tag : currentTags) {
+						if (!listA.contains(tag) && !listB.contains(tag)) {
+							listA.add(tag);
+						}
+					}
+					
+					// Remove players not in clan from both lists
+					listA.removeIf(tag -> !currentTags.contains(tag));
+					listB.removeIf(tag -> !currentTags.contains(tag));
+					
+					// Update database
+					String updateSql = "UPDATE cwdonator_lists SET list_a = ?::text[], list_b = ?::text[] WHERE clan_tag = ?";
+					try (PreparedStatement updateStmt = conn.prepareStatement(updateSql)) {
+						updateStmt.setArray(1, conn.createArrayOf("text", listA.toArray()));
+						updateStmt.setArray(2, conn.createArrayOf("text", listB.toArray()));
+						updateStmt.setString(3, clanTag);
+						updateStmt.executeUpdate();
+					}
+				}
+			}
+		} catch (Exception e) {
+			System.err.println("Error initializing/syncing cwdonator lists: " + e.getMessage());
+			e.printStackTrace();
+		}
+	}
+	
+	/**
+	 * Pick a player from List A, move to List B, handle list swap if needed
+	 */
+	private Player pickPlayerFromListA(String clanTag, ArrayList<Player> warMemberList, 
+									   Tuple<Integer, Integer> map, boolean excludeLeaders) {
+		try (Connection conn = dbutil.Connection.getConnection()) {
+			// Get current lists
+			String selectSql = "SELECT list_a, list_b FROM cwdonator_lists WHERE clan_tag = ?";
+			ArrayList<String> listA = new ArrayList<>();
+			ArrayList<String> listB = new ArrayList<>();
+			
+			try (PreparedStatement stmt = conn.prepareStatement(selectSql)) {
+				stmt.setString(1, clanTag);
+				ResultSet rs = stmt.executeQuery();
+				if (rs.next()) {
+					Array listAArray = rs.getArray("list_a");
+					Array listBArray = rs.getArray("list_b");
+					if (listAArray != null) {
+						String[] listAData = (String[]) listAArray.getArray();
+						for (String tag : listAData) {
+							listA.add(tag);
+						}
+					}
+					if (listBArray != null) {
+						String[] listBData = (String[]) listBArray.getArray();
+						for (String tag : listBData) {
+							listB.add(tag);
+						}
+					}
+				}
+			}
+			
+			// If List A is empty, swap List B to List A
+			if (listA.isEmpty()) {
+				listA.addAll(listB);
+				listB.clear();
+			}
+			
+			// Build a list of eligible players from warMemberList that are in List A
+			ArrayList<Player> eligiblePlayers = new ArrayList<>();
+			for (Player p : warMemberList) {
+				if (listA.contains(p.getTag())) {
+					// Check constraints
+					int mapposition = p.getWarMapPosition();
+					if (mapposition >= map.getFirst() && mapposition <= map.getSecond()) {
+						continue; // Skip if in donation range
+					}
+					if (!p.getWarPreference()) {
+						continue; // Skip if opted out
+					}
+					eligiblePlayers.add(p);
+				}
+			}
+			
+			// Pick a player
+			Player chosen = null;
+			if (!eligiblePlayers.isEmpty()) {
+				Collections.shuffle(eligiblePlayers);
+				
+				// Try to find non-leader if excludeLeaders is true
+				if (excludeLeaders) {
+					for (Player p : eligiblePlayers) {
+						if (!isLeaderOrCoLeader(p)) {
+							chosen = p;
+							break;
+						}
+					}
+					
+					// If all are leaders, pick first leader but still move them
+					if (chosen == null && !eligiblePlayers.isEmpty()) {
+						chosen = eligiblePlayers.get(0);
+						// Move to list B but reroll (skip this player)
+						listA.remove(chosen.getTag());
+						listB.add(chosen.getTag());
+						
+						// Update database
+						String updateSql = "UPDATE cwdonator_lists SET list_a = ?::text[], list_b = ?::text[] WHERE clan_tag = ?";
+						try (PreparedStatement updateStmt = conn.prepareStatement(updateSql)) {
+							updateStmt.setArray(1, conn.createArrayOf("text", listA.toArray()));
+							updateStmt.setArray(2, conn.createArrayOf("text", listB.toArray()));
+							updateStmt.setString(3, clanTag);
+							updateStmt.executeUpdate();
+						}
+						
+						// Recursive call to pick again
+						return pickPlayerFromListA(clanTag, warMemberList, map, excludeLeaders);
+					}
+				} else {
+					chosen = eligiblePlayers.get(0);
+				}
+			}
+			
+			// If no player found, fall back to any player from List A in war
+			if (chosen == null) {
+				for (Player p : warMemberList) {
+					if (listA.contains(p.getTag())) {
+						chosen = p;
+						break;
+					}
+				}
+			}
+			
+			// If still no player, fall back to first available
+			if (chosen == null && !warMemberList.isEmpty()) {
+				chosen = warMemberList.get(0);
+			}
+			
+			if (chosen != null) {
+				// Move chosen player from List A to List B
+				listA.remove(chosen.getTag());
+				listB.add(chosen.getTag());
+				
+				// Update database
+				String updateSql = "UPDATE cwdonator_lists SET list_a = ?::text[], list_b = ?::text[] WHERE clan_tag = ?";
+				try (PreparedStatement updateStmt = conn.prepareStatement(updateSql)) {
+					updateStmt.setArray(1, conn.createArrayOf("text", listA.toArray()));
+					updateStmt.setArray(2, conn.createArrayOf("text", listB.toArray()));
+					updateStmt.setString(3, clanTag);
+					updateStmt.executeUpdate();
+				}
+			}
+			
+			return chosen;
+		} catch (Exception e) {
+			System.err.println("Error picking player from List A: " + e.getMessage());
+			e.printStackTrace();
+			// Fallback to simple random
+			if (!warMemberList.isEmpty()) {
+				Collections.shuffle(warMemberList);
+				return warMemberList.get(0);
+			}
+			return null;
+		}
+	}
+	
+	/**
+	 * Check if a player is a leader or co-leader
+	 */
+	private boolean isLeaderOrCoLeader(Player player) {
+		Player.RoleType roleDB = player.getRoleDB();
+		return roleDB == Player.RoleType.LEADER || roleDB == Player.RoleType.COLEADER;
 	}
 
 }
